Patient list style edited: Fixed position for filters Removed unnecessary padding , removed round corners Fix ward select alignment

--- a/WardBook/web-app/css/ward-book.css
+++ b/WardBook/web-app/css/ward-book.css
@@ -216,3 +216,41 @@ th, td {
 .user-status-online {
     color: #0c0;
 }
+
+
+.fixed {
+    position: fixed;
+}
+
+.no-padding {
+    padding: 0;
+}
+
+.gap-bottom {
+    margin-bottom: 14px;
+}
+/*------------------------------------
+------------- PATIENT LIST ---------------
+-------------------------------------*/
+
+
+.ward-select button {
+    padding-top: 0;
+}
+
+.ward-select button h3 {
+    margin-top: 0;
+    text-transform: uppercase;
+}
+
+.panel, .panel-heading, .panel-group .panel {
+    border-radius: 0;
+}
+.panel {
+    margin-bottom: 0 ;
+}
+
+.panel-group .panel + .panel {
+    margin-top: 0;
+}
+
